ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__Broadcaster_Stats_Per_Hour__c/CnP_PaaS__Broadcaster_Stats_Per_Hour__c.object-meta.xml
<CustomObject>
    <label>C&amp;P Broadcaster Stats Per Hour</label>
    <nameField>
        <label>Broadcaster Stats Per Hours Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>C&amp;P Broadcaster Stats Per Hour</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>