ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__Broadcaster_Stats_Per_Hour__c/fields/CnP_PaaS__Broadcaster_Campaign__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Broadcaster_Campaign__c</fullName>
    <label>Broadcaster Campaign</label>
    <referenceTo>CnP_PaaS__Broadcaster_Campaign__c</referenceTo>
    <relationshipName>Broadcaster_Stats_Per_Hour</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>