ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__Broadcaster_Stats_Per_Hour__c/fields/CnP_PaaS__Broadcaster_Stats__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Broadcaster_Stats__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Broadcaster Stats</label>
    <referenceTo>CnP_PaaS__Broadcaster_Stats__c</referenceTo>
    <relationshipName>Broadcaster_Stats_Per_Hour</relationshipName>
    <type>Lookup</type>
</CustomField>