ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__Broadcaster_Stats_Per_Hour__c/fields/CnP_PaaS__Emails_Sent__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Emails_Sent__c</fullName>
    <label>Emails Sent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>