ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__Broadcaster_Stats_Per_Hour__c/fields/CnP_PaaS__Timestamp__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Timestamp__c</fullName>
    <label>Timestamp</label>
    <length>255</length>
    <type>Text</type>
</CustomField>